--- a/nov_12_2022/ServerProject/static/css.scss
+++ b/nov_12_2022/ServerProject/static/css.scss
@@ -237,3 +237,11 @@ footer a {
   &:hover {color: $lightBlack;}
 }
 .copy {font-size: .85em;}
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
+}
